syntax = "proto3";

package noble.authority.v1;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/noble-assets/authority/x/authority/types";

message GenesisState {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string pending_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
